<resources>
    <string name="app_name">Chapp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="bluetooth">Bluetooth</string>
    <string name="log_file">Log File</string>
    <string name="write_something">Write Something</string>
    <string name="test_message" />
    <string name="test_stamp" />
    <string name="Channel">Channel</string>
    <string name="device_name">Device name</string>
    <string name="mac_address">Mac address</string>
    <string name="Create_Channel">Create Channel</string>
    <string name="Channel_List">Channel List</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_count">Channel Count</string>
    <string name="last_message">Last message</string>
    <string name="Input_Channel_Name">Input Channel Name</string>
    <string name="Chat">Chat</string>
    <string name="me">Me</string>
    <string name="sender">Sender</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="Export_Data">Export Data</string>
    <string name="refresh">Refresh</string>
</resources>